Fri Feb  6 12:10:18 1998  Ian Lance Taylor  <ian@cygnus.com>

	* rcs.c (RCS_reparsercsfile): Don't use ftell/fseek; just keep
	track of whether we've already read a key/value pair.  Use sizeof
	rather than strlen for a constant string.  Pass the current key
	and value to getdelta, and get them back as well.
	(getdelta): Add keyp and valp parameters.  Don't use ftell/fseek;
	just return the key/value pair to the caller.  Don't allocate
	vnode before we know we need it.  Check one getrcskey return
	value.  Use sizeof rather than strlen for a constant string.

	* rcs.c (getrcskey): Correct comment describing return value.

Thu Feb  5 22:51:13 1998  Ian Lance Taylor  <ian@cygnus.com>

	* subr.c (getcaller): Cache the result, so that we don't keep
	searching the password file.

Wed Feb  4 23:31:08 1998  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (max_rev): Don't prototype.  Interesting that noone
	complained about this until now.

4 Feb 1998  Jim Kingdon

	* rcs.c (RCS_checkin): When adding a new file, read it
	with "rb" if binary.

Fri Jan 30 11:32:41 1998  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Also test "first-dir" as the regexp in loginfo in
	addition to ALL.

	* main.c (main): Update year in copyright notice to 1998.

Thu Jan 29 00:01:05 1998  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* version.c: Change version number to 1.9.25.

	* Version 1.9.24.

	* sanity.sh (multibranch2): File file2 and tests multibranch2-13
	through multibranch2-15 test a slightly different case than the
	rest of multibranch2.

	* mkmodules.c (cvswrappers_contents): Rewrite.  The text didn't
	describe -k and had various other problems.

28 Jan 1998  Karl Fogel and Jim Kingdon

	New feature to let server tell client about wrappers.
	* client.h (struct response): Add comment about args being
	'\0' terminated when passed to handle_* functions.
	* client.c (start_server): send "wrapper-sendme-rcsOptions" to
	server iff supported.